--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BootUp">
+        <activity android:name=".DataMain">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
         </activity>
-        <activity android:name=".UserLocation"></activity>
         <activity android:name=".UserMenuActivity"></activity>
         <activity android:name=".LoginActivity"></activity>
         <activity android:name=".ConfirmPicActivity" />
