--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.scrapp">
+    package="com.stars.scrapp">
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -21,7 +21,7 @@
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="com.example.scrapp"
+            android:authorities="com.stars.scrapp"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
@@ -43,17 +43,17 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
-        <activity android:name=".DataMain">
+        <activity android:name="com.stars.scrapp.DataMain">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ConfirmPicActivity" />
-        <activity android:name=".LocationDetailActivity" />
-        <activity android:name=".LocationMapActivity" />
-        <activity android:name=".LocationListActivity" />
+        <activity android:name="com.stars.scrapp.ConfirmPicActivity" />
+        <activity android:name="com.stars.scrapp.LocationDetailActivity" />
+        <activity android:name="com.stars.scrapp.LocationMapActivity" />
+        <activity android:name="com.stars.scrapp.LocationListActivity" />
     </application>
 
 </manifest>
